Trying to fix the scrollbar to not appear on mobile devices

--- a/style.css
+++ b/style.css
@@ -376,14 +376,8 @@ h2 {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px){
     ::-webkit-scrollbar {
-        display: none; 
+        -webkit-appearance: none;
     }
-    body {
-        scrollbar-width: none;
-        -ms-overflow-style: none; 
-        overflow: -moz-scrollbars-none;
-        -webkit-overflow-scrolling: touch;
-    }
-}
+  }
